<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context=".activity.FeedBackActivity" >

    <RelativeLayout
        android:id="@+id/feed_back_rl_top"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/all_top_backgroup" >

        <ImageView
            android:id="@+id/feed_back_iv_top_left"
            style="@style/text_padding_all_10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="iv_top_left"
            android:src="@drawable/sender_ddress_top_left_bt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback_top_title"
            android:textSize="22sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/feed_back_rl_top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/feedback_et_rl_top"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/all_top_backgroup"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/feedback_et_iv_top_left"
                    style="@style/text_padding_all_5dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/all_top_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/feedback_top_title"
                    android:textSize="22sp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/feedback_et_feed"
                style="@style/etpersonal"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="15dip"
                android:background="@color/TextColorWhite"
                android:gravity="top"
                android:hint="@string/feedback_et_context"
                android:inputType="text"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_tv_orther"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_tv_phone"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_service_tel"
                        android:textColor="@color/text_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_tv_qq"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/feedback_tv_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_company_qq"
                        android:textColor="@color/text_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_tv_sina_blog"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/feedback_tv_sina_blog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_sina_wei_bo"
                        android:textColor="@color/text_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_tv_wechat"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/feedback_tv_wechat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_tecent_we_chat"
                        android:textColor="@color/text_color" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:src="@drawable/all_line" />

            <Button
                android:id="@+id/feedback_bt_send"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/user_login_bt"
                android:text="@string/user_login_send"
                android:textColor="@color/TextColorWhite"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>